--- a/web/src/App.css
+++ b/web/src/App.css
@@ -33,6 +33,10 @@
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(54111deg);
   }
+}
+
+.images{
+  display: inline-block;
 }
